 @startuml

entity User {
    * ** id : Integer [PK] **
    * firstName : String
    * lastName : String
    * email : String [Unique]
    * password : String
    * balance : Decimal
    phone : String
    address : String
    city : String
    zipCode : String
}

entity Token {
    * ** id : String [PK] **
    * creation_date: DateTime
    * expire_date: DateTime
    * expired: Boolean
    * user_id: Integer [FK]
}
Token ||--o{ User : authenticated by

entity Category {
    * ** id : Integer [PK] **
    * name : String
    parent_id : Integer [FK]
}
Category ||--o| Category : belongs to

entity Lot {
    * ** id : Integer [PK] **
    * name : String
    * description : String
    * initial_price : Decimal
    * last_price: Decimal
    * location : String
    * creation_date: DateTime
    publish_ate : DateTime
    close_date : DateTime
    transfer_date : DateTime
    * category_id : Integer [FK]
    * seller_user_id: Integer[FK]
    * buyer_user_id: Integer[FK]
}
Lot ||--o{ Category : classified by
Lot ||--o{ User : selled by
Lot ||--o{ User : buyed by

entity Auction {
    * ** id : Integer [PK] **
    * price : Decimal
    * date : DateTime
    * lot_id : Integer [FK]
    * user_id : Integer [FK]
}
Lot }o--|| Auction : priced by
Auction ||--o{ User : bid by
@enduml